@@ -28,6 +28,9 @@ Version 1.13.4+dev:
    * Allow changing keybindings for scrolling the map.
    * Fixed bug #24696 (Nightstalk ability not working)
 
+ * Multiplayer
+   * Added "Registered users only" checkbox to multiplayer configuration dialog which 
+     when checked, only allows registered users to join the game
 
 Version 1.13.4:
  * Language and i18n:
