@@ -53,6 +53,7 @@ mp_game_settings::mp_game_settings() :
 	fog_game(false),
 	shroud_game(false),
 	allow_observers(false),
+	registered_users_only(false),
 	shuffle_sides(false),
 	saved_game(false),
 	random_faction_mode(RANDOM_FACTION_MODE::DEFAULT),
@@ -85,6 +86,7 @@ mp_game_settings::mp_game_settings(const config& cfg)
 	, fog_game(cfg["mp_fog"].to_bool())
 	, shroud_game(cfg["mp_shroud"].to_bool())
 	, allow_observers(cfg["observer"].to_bool())
+	, registered_users_only(cfg["registered_users_only"].to_bool())
 	, shuffle_sides(cfg["shuffle_sides"].to_bool())
 	, saved_game(cfg["savegame"].to_bool())
 	, random_faction_mode(cfg["random_faction_mode"].to_enum<RANDOM_FACTION_MODE>(RANDOM_FACTION_MODE::DEFAULT))
@@ -125,6 +127,7 @@ config mp_game_settings::to_config() const
 	cfg["mp_use_map_settings"] = use_map_settings;
 	cfg["mp_random_start_time"] = random_start_time;
 	cfg["observer"] = allow_observers;
+	cfg["registered_users_only"] = registered_users_only;
 	cfg["shuffle_sides"] = shuffle_sides;
 	cfg["random_faction_mode"] = random_faction_mode;
 	cfg["savegame"] = saved_game;
