@@ -153,6 +153,8 @@ Version 1.13.4+dev:
      specify the current_player attribute in the [side] wml.  
    * unit filters, specially in wesnoth.get_units now have a limit= attribute
      to limit the number or matched units.
+   * Added new attribute "registered_users_only" to MultiplayerServerWML which indicates
+     that only registered users should be allowed to join the game
  * Lua API:
    * wesnoth.match_unit can now take a location (rather than a unit) as
      the optional third parameter. This will cause the filter to consider
@@ -235,6 +237,8 @@ Version 1.13.4+dev:
      (fr #22635)
  * Multiplayer:
    * Hornshark Island: simplified multiplayer faction determination
+   * Added "Registered users only" checkbox to multiplayer configuration dialog which 
+     when checked, only allows registered users to join the game
  * Wesnoth formula engine:
    * Formulas in unit filters can now access nearly all unit attributes
      The following attributes were renamed (old names still work, for now):
